--- a/text.html
+++ b/text.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=divice-width, initialscal=1.0">
     <title>Mami Hagimoto</title>
-<style type="text/css">
- body{
+    <style type="text/css">
+    body{
      background-color: #c69ab9;
  }
 
- #nav {
-  list-style: none;
-  overflow: hidden;
-}
+     #nav {
+     list-style: none;
+     overflow: hidden;
+ } 
  
-#nav li {
-  width: 140px;
-  text-align: center;
-  float: left;
-}
+    #nav li {
+     width: 140px;
+     text-align: center;
+     float: left;
+ }
  
-#nav li a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-}
+   #nav li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+ }
  </style>
-
 </head>
-<body>
+
+<body text="white">  
     <nav>
  <ul id="nav">
     <li><a href="#1">home</a></li>
@@ -37,9 +37,8 @@
     <li><a href="#4">contact</a></li>
   </ul>
 
-  <div class="oneArea" id="1">
+<p>Mami Hagimoto</p>
 
-  </div>
-      
+</strict>     
 </body>
 </html>
