--- a/text.html
+++ b/text.html
@@ -7,37 +7,82 @@
     <style type="text/css">
     body{
      background-color: #c69ab9;
+     text-align: center;
+     font-family:Verdana, Geneva, Tahoma, sans-serif
  }
 
-     #nav {
+    .nav {
      list-style: none;
      overflow: hidden;
- } 
- 
-    #nav li {
-     width: 140px;
      text-align: center;
-     float: left;
+      } 
+ 
+    .nav li {
+     width: 140px;
+     float: flex;
+     display: inline;
+     align-items: center;
+     
  }
  
-   #nav li a {
+  .nav li a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
  }
+
+  .h1 {
+   margin: 20px;
+   padding: 10px;
+ } 
  </style>
+<script>
+ 'use strict';
+
+ document.getElementById
+
+</script>
+
 </head>
 
 <body text="white">  
-    <nav>
- <ul id="nav">
-    <li><a href="#1">home</a></li>
-    <li><a href="#2">about me</a></li>
-    <li><a href="#3">skills</a></li>
-    <li><a href="#4">contact</a></li>
+  <nav>
+ <ul class="nav">
+    <li><a href="#home">home</a></li>
+    <li><a href="#about me">about me</a></li>
+    <li><a href="#skills">skills</a></li>
+    <li><a href="#contact">contact</a></li>
   </ul>
 
-<p>Mami Hagimoto</p>
+  <br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
+<h1>Mami Hagimoto</h1>
+<inm src="バラのフリーイラスト4.png">
+  <br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br>
+
+<h2 id="about me">about me</h2>
+<p>私の強みは柔軟性です。今回の研修ではエラーの解決を図る際、</p>
+<p>一つの解決方法に固執せず、複数のアプローチで取り組みました。</p>  
+<P>また、他者の意見を尊重し、折り合いをつけることを常に意識し</P>
+<p>ています。今後様々な難所に直面する際、私の強みである柔軟性を</p>
+<p>活用し、業務遂行に尽力していく所存です。</p>
+<br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
+
+
+<h2 id="skills">skills</h>
+<p>・SQL</p>
+<p>・JavaScript</p>
+<p>・Linux</p><br><br>
+<p>まだまだ未熟ですが、たくさんのスキルを身につけるため頑張ります！</p>
+<br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
+
+<h2 id="contact">contact</h>
+<p>mail:mami.hagimoto@force-corp.co.jp</p>
+
+<h2 id="home">home </p>
 
 </strict>     
 </body>
